# userver-astra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Makefile.local
configs/: config_vars.docker.yaml  config_vars.testing.yaml  static_config.yaml
proto/api/: greeter_service.proto
src/: greeter_service.cpp  greeter_service.hpp  main.cpp
tests/: conftest.py  test_greeter.py
